samples/_failures_safe/1761715218_671114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d9b667f.c: In function ‘main’:
./samples/SAFE/__tmp_8d9b667f.c:153:25: error: missing terminating " character
  153 |         fprintf(stderr, "Ver
      |                         ^~~~
./samples/SAFE/__tmp_8d9b667f.c:153:9: error: expected expression at end of input
  153 |         fprintf(stderr, "Ver
      |         ^~~~~~~
./samples/SAFE/__tmp_8d9b667f.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8d9b667f.c:153:9: error: expected declaration or statement at end of input
